[project]
name = "trading"
version = "0.1.0"
description = "Event-driven algorithmic trading infrastructure"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "typer>=0.12",
    "structlog>=24.0",
    "prometheus-client>=0.19",
    "pyyaml>=6.0",
    "pandas-ta>=0.3",
    "vectorbt>=0.28",
    "websockets>=12.0",
]

[project.scripts]
trading = "trading.cli.main:app"

[dependency-groups]
dev = [
    "ruff>=0.3",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "freezegun>=1.5",
    "fakeredis[lua]>=2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true

[[tool.mypy.overrides]]
module = ["pandas_ta.*", "vectorbt.*", "TA-Lib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["trading.data.indicators"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "infra: tests/infra/ — infrastructure plumbing (bus, buffer, config, adapters, news providers)",
    "trading: tests/trading/ — trading behavior (strategies, orchestrator, exits, filters, backtest)",
]
